static/index.css
/* ... */
.mountains > div {
    box-shadow: 
    -1em -0.2em 0.4em -1.1em #c2ccff,
    inset 0em 0em 0em 2px #c2ccff,
    inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
    inset 10.2em 10.3em 2em -10em #d4e6ff2f;
    background: #121521;
    z-index: 1;
    filter: brightness(0.8);
    position: absolute; left: 0; right: 0; margin: auto;
    width: 20em; height: 20em;
    rotate: 45deg;
}
.mountains > div:nth-child(1) {
    bottom: -240%; 
    translate: -6em 2em;
    animation: mountainload1 2s ease-out 2.4s forwards;
}
.mountains > div:nth-child(2) {
    bottom: -240%;
    translate: -2em 0em;
    width: 14em; height: 20em;
    animation: mountainload2 2s ease-out 2.2s forwards;
}
.mountains > div:nth-child(3) {
    bottom: -240%; 
    translate: 6em 3em;
    animation: mountainload1 2s ease-out 2s forwards;
}
@keyframes mountainload1 {
    0% { bottom: -240%; }
    100% { bottom: -140%; }
}
@keyframes mountainload2 {
    0% { bottom: -240%; }
    100% { bottom: -108%; }
}
.mountains > div::before {
    content: ''; display: block;
    background: repeating-radial-gradient( at 100% 100%, transparent 0%, #c2ccff22 2px, transparent 4px);
    width: 12em; height: 12em;
    position: absolute;
    left: 0; top: 0;
    border-bottom-right-radius: 100%;
}

.hero-spacer {
    height: 40em;
    pointer-events: none;
}

.content-section {
    position: relative;
    z-index: 1112;
    color: #fff;
    width: 100%;
    text-align: center;
    padding: 16em 0 12em 0;
    overflow: hidden;
}

.content-section p.subt {
    color: #d8ecf8be;
    font-size: 0.8em;
    font-weight: 200;
    position: relative;
    width: fit-content;
    margin: auto;
}
.content-section h3 {
    margin: 0.4em 0 0.6em 0;
    font-size: 2.3em;
    font-weight: 600;
    color: #d8ecf8;
    text-shadow: 0 2px 16px rgba(174,207,242,.24);
    background: linear-gradient(0deg, #d8ecf8 0, #98c0ef 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.content-section p.subp {
    color: #d8ecf8be;
    font-size: 1em;
    font-weight: 400;
    max-width: 26em;
    margin: auto;
}

.content-section p.subt::before,
.content-section p.subt::after {
    position: absolute; top: 60%; 
    display: block; content: '';
    width: 5em; height: 1px;
    opacity: 0.5;
}
.content-section p.subt::before{
    background: linear-gradient( -90deg, #9dc3f7 0%, transparent 100%);
    right: 120%;
    top: 50%;
}
.content-section p.subt::after {
    background: linear-gradient( 90deg, #9dc3f7 0%, transparent 100%);
    left: 120%;
    top: 50%;
}

.content-section .content-acc {
    position: absolute;
    left: 0; right: 0; top: 25%; margin: auto;
    display: flex; justify-content: center;
}
.content-section .content-acc div{
    width: 10em; height: 10em;
    border-radius: 50%;
    box-shadow: 
    -1em -0.2em 0.4em -1.1em #c2ccff,
    inset 0em 0em 0em 2px #c2ccff,
    inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
    inset -1.2em 2.3em 2em -0.5em #d4e6ff2f;
    background: #121521;
    z-index: 1;
    filter: brightness(0.8);
    background: repeating-radial-gradient( at 50% 50%, transparent 0%, #c2ccff22 2px, transparent 4px);
    translate: -18em;
}
.content-section .content-acc div:nth-child(2){
    translate: 18em 12em;
    border-radius: 2em;
    box-shadow: 
    -1em -0.2em 0.4em -1.1em #c2ccff,
    inset 0em 0em 0em 2px #c2ccff,
    inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
    inset 10.8em 11.3em 2em -10.5em #d4e6ff2f;
}
body.admin .header > div.mid-spot:hover {
    box-shadow: -0.3em 0.1em 0.2em 0 #98c0ef;
}

body.admin .header > div.mid-spot {
    box-shadow: 0 0 1em 0 #10d8c7;
}
body.admin .header h2 ,
body.admin p,
body.admin > * > * :not(.contact-btn) {
    filter: invert(1) brightness(4.7) hue-rotate(50deg);
}
body.admin .header h2 a{
    filter: hue-rotate(50deg);
}
body.admin canvas {
    filter: drop-shadow(2em 4em 0px #10d8c7) drop-shadow(-8em -14em 0px #10d8c7);
}
body.admin .header .spotlight {
    filter: invert(1) brightness(4.7) opacity(0.5) hue-rotate(50deg);
}
body.admin .mountains > div {
    box-shadow: 
    -1em -0.2em 0.4em -1.1em #c2ccff,
    inset 0em 0em 0em 2px #10d8c7,
    inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
    inset 10.2em 10.3em 2em -10em #d4e6ff2f;
}

body.admin .content-section,
body.admin .content-section ::before,
body.admin .content-section ::after{
    filter: invert(1) brightness(4.4) opacity(1) hue-rotate(50deg);
}
/* Reverse 'colorize' animation */
.reverse-colorize {
  animation: colorize 2s reverse forwards;
}

/* Reverse 'loop' animation */
.reverse-loop {
  animation: loop 5s reverse forwards;
}

/* Reverse 'btn-rot' animation */
.reverse-btn-rot {
  animation: btn-rot 3s reverse forwards;
}

/* Reverse 'loadrot' animation */
.reverse-loadrot {
  animation: loadrot 2s reverse forwards;
}

/* Reverse 'spotlight' animation */
.reverse-spotlight {
  animation: spotlight 4s reverse forwards;
}

/* Reverse 'load' animation */
.reverse-load {
  animation: load 2s reverse forwards;
}

/* Reverse 'pulse' animation */
.reverse-pulse {
  animation: pulse 3s reverse forwards;
}

/* Reverse 'up' animation */
.reverse-up {
  animation: up 2s reverse forwards;
}

/* Reverse 'load3' animation */
.reverse-load3 {
  animation: load3 2s reverse forwards;
}

/* Reverse 'load2' animation */
.reverse-load2 {
  animation: load2 2s reverse forwards;
}

/* Reverse 'accentload' animation */
.reverse-accentload {
  animation: accentload 2s reverse forwards;
}

/* Reverse 'accentload2' animation */
.reverse-accentload2 {
  animation: accentload2 2s reverse forwards;
}

/* Reverse 'accentload3' animation */
.reverse-accentload3 {
  animation: accentload3 2s reverse forwards;
}

/* Reverse 'mountainload1' animation */
.reverse-mountainload1 {
  animation: mountainload1 2s reverse forwards;
}

/* Reverse 'mountainload2' animation */
.reverse-mountainload2 {
  animation: mountainload2 2s reverse forwards;
}
/* ... */

